force-app/main/default/objects/Medication_Including_Psychotropic__c/Medication_Including_Psychotropic__c.object-meta.xml
<CustomObject>
    <label>Medication Including Psychotropic</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Medication Including Psychotropic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication Including Psychotropics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>