force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medication Including Psychotropics</relationshipLabel>
    <relationshipName>Medication_Including_Psychotropics</relationshipName>
    <type>Lookup</type>
</CustomField>