force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After meals(p.c.)</fullName>
            </value>
            <value>
                <fullName>At bedtime (q. H.S.)</fullName>
            </value>
            <value>
                <fullName>Before meals (a.c.)</fullName>
            </value>
            <value>
                <fullName>Every X hours daily (Specify number)</fullName>
            </value>
            <value>
                <fullName>Four times daily (q.i.d.)</fullName>
            </value>
            <value>
                <fullName>Once Daily (q.d.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Three times daily (t.i.d.)</fullName>
            </value>
            <value>
                <fullName>Twice Daily (b.i.d.)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>