force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Is_Client_Prescribed_Medication__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Prescribed_Medication__c</fullName>
    <label>Is Client Prescribed Medication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>