force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <label>Medication Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>