force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Method_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Delivery__c</fullName>
    <label>Method of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vaginal</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Caesarian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>