force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Prescribed_Duration__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Duration__c</fullName>
    <label>Prescribed Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other(Specify)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>X Days(specify)</fullName>
            </value>
            <value>
                <fullName>X Weeks(specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>