force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Prescribing_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Doctor__c</fullName>
    <label>Prescribing Doctor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>