force-app/main/default/objects/Medication_Including_Psychotropic__c/fields/Reason_Prescribed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Prescribed__c</fullName>
    <label>Reason Prescribed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>